@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+	<!--Deploy: Spring Information-->
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -9,24 +11,58 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
-	<version>1.0.12-SNAPSHOT</version>
-	<groupId>com.huntercodexs.codexstester</groupId>
-
-	<name>codexstester</name>
+	<!--Deploy: Coordinates-->
+	<packaging>jar</packaging>
+	<groupId>com.huntercodexs</groupId>
 	<artifactId>codexstester</artifactId>
-	<description>codexstester</description>
+	<version>1.0.12</version>
 
+	<!--Deploy: ProjectName, Description and URL-->
+	<name>codexstester</name>
+	<description>codexstester</description>
+	<url>https://github.com/huntercodexs/codexstester</url>
+
+	<!--Deploy: License Information-->
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+		</license>
+	</licenses>
+
+	<!--Deploy: Developer Information-->
+	<developers>
+		<developer>
+			<name>Huntercodexs</name>
+			<email>huntercodexs@gmail.com</email>
+			<organization>Huntercodexs</organization>
+			<organizationUrl>http://www.huntercodexs.com</organizationUrl>
+		</developer>
+	</developers>
+
+	<!--Deploy: SCM Information-->
+	<scm>
+		<connection>scm:git:git://github.com/huntercodexs/codexstester</connection>
+		<developerConnection>scm:git:ssh://github.com:huntercodexs/codexstester</developerConnection>
+		<url>http://github.com/huntercodexs/codexstester/tree/release-1.0.12--java-21-spring-boot-3.3.2</url>
+	</scm>
+
+	<!--Deploy: Project Properties-->
 	<properties>
 
+		<!--Java Version-->
 		<java.version>21</java.version>
 
+		<!--Dependencies Versions-->
 		<junit.version>4.13.2</junit.version>
 		<junit-jupiter.version>5.8.2</junit-jupiter.version>
 		<junit-platform.version>1.10.3</junit-platform.version>
 		<selenium.version>4.19.1</selenium.version>
 
+		<!--Charset Encoding - Optional-->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
 	</properties>
 
 	<dependencies>
@@ -99,49 +135,16 @@
 
 	</dependencies>
 
-	<repositories>
-		<repository>
-			<id>maven_central</id>
-			<name>Maven Central</name>
-			<url>https://repo.maven.apache.org/maven2/</url>
-		</repository>
-	</repositories>
-
-	<pluginRepositories>
-		<pluginRepository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</pluginRepository>
-		<pluginRepository>
-			<id>spring-snapshots</id>
-			<name>Spring Snapshots</name>
-			<url>https://repo.spring.io/snapshot</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</pluginRepository>
-	</pluginRepositories>
-
 	<build>
 		<plugins>
 
-			<!--Generate Final Jar with all dependency-->
+			<!--Build: Generate Final Jar with all dependency-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>3.2.4</version>
 				<configuration>
 					<createDependencyReducedPom>false</createDependencyReducedPom>
-					<!--JVM Options-->
-					<!-- -ea
-					-Xshare:off
-					-XX:+EnableDynamicAgentLoading
-					&#45;&#45;add-opens java.base/java.util=ALL-UNNAMED
-					&#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED-->
 				</configuration>
 				<executions>
 					<execution>
@@ -153,7 +156,88 @@
 				</executions>
 			</plugin>
 
+			<!--Deploy: Maven Sources-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!--Deploy: Maven JavaDoc-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.3.2</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+				<!--To prevent the warning: "javadoc: warning - The code being documented uses modules but the packages..."-->
+				<configuration>
+					<source>8</source>
+				</configuration>
+			</plugin>
+
+			<!--Deploy: GPG Assign-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+						<!--To specify the GPG Key-->
+						<configuration>
+							<keyname>D89E6177</keyname>
+							<!--To avoid gpg error: signing failed: No such file or directory-->
+							<gpgArguments>
+								<arg>--pinentry-mode</arg>
+								<arg>loopback</arg>
+							</gpgArguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!--Deploy: Maven Publishing Central-->
+			<plugin>
+				<groupId>org.sonatype.central</groupId>
+				<artifactId>central-publishing-maven-plugin</artifactId>
+				<version>0.6.0</version>
+				<extensions>true</extensions>
+				<configuration>
+					<publishingServerId>central</publishingServerId>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
+
+	<distributionManagement>
+		<!--Deploy: Distribution on Maven Central-->
+		<repository>
+			<id>central</id>
+			<layout>default</layout>
+			<name>Maven Central</name>
+			<uniqueVersion>false</uniqueVersion>
+			<url>https://central.sonatype.com/api/v1/publisher/upload</url>
+		</repository>
+	</distributionManagement>
 
 </project>
